Align ment fixing

--- a/css/global.css
+++ b/css/global.css
@@ -2937,12 +2937,12 @@ input[type=range]+.thumb.active .value {
     overflow: auto;
 }
 
-.Settings-Section img,
+/* .Settings-Section img,
 .Menu-Section img {
     width: 50px;
     height: 50px;
     margin-top: 10px;
-}
+} */
 
 .Settings-network-Section ul li:first-child,
 .Settings-wifi-Section ul li:first-child,
